--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
         <section id="projects">
             <h2>Projects</h2>
             <div class="project">
+                <h3>Graph Classification with GCN on PROTEINS Dataset</h3>
+                <p>a Graph Convolutional Network (GCN) using the DGL library for graph classification on the PROTEINS dataset.</p>
+                <a href="https://github.com/elnazabbasifar/GCN_PROTEINS_Classification_DGL" target="_blank">View Project</a>
+            </div>
+            <div class="project">
                 <h3>Precision in Cardiovascular Risk Prediction</h3>
                 <p>Heart Disease Prediction using Lasso Regression.</p>
                 <a href="https://github.com/elnazabbasifar/Heart-Disease-Prediction-using-Lasso-Regression" target="_blank">View Project</a>
