--- a/index.html
+++ b/index.html
@@ -1,132 +1,117 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elnaz Abbasifar - AI & Data Science Enthusiast</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-            line-height: 1.6;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        nav {
-            background: #444;
-            display: flex;
-            justify-content: center;
-            padding: 0.5rem 0;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 1rem;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-            padding: 1rem 0;
-        }
-        section {
-            margin-bottom: 2rem;
-        }
-        h2 {
-            color: #444;
-            margin-bottom: 1rem;
-        }
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem 0;
-            margin-top: 2rem;
-        }
-        .project, .publication {
-            margin-bottom: 1rem;
-        }
-        .project a, .publication a {
-            color: #0066cc;
-            text-decoration: none;
-        }
-        .project a:hover, .publication a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>[Your Name] - Personal Website</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+  <style>
+    /* Carousel styling */
+    .carousel {
+      display: flex;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+      gap: 1rem;
+      padding-bottom: 1rem;
+      scroll-behavior: smooth;
+    }
+    .carousel img {
+      scroll-snap-align: start;
+      border-radius: 0.5rem;
+      height: 220px;
+      object-fit: cover;
+      transition: transform 0.3s;
+    }
+    .carousel img:hover {
+      transform: scale(1.05);
+    }
+  </style>
 </head>
-<body>
-    <header>
-        <h1>Elnaz Abbasifar</h1>
-        <p>AI & Data Science Enthusiast | PhD Applicant</p>
-    </header>
-    <nav>
-        <a href="#about">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#publications">Publications</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <div class="container">
-        <section id="about">
-            <h2>About Me</h2>
-            <p>I am a passionate researcher and professional with expertise in Machine Learning, Data Science, and Artificial Intelligence. 
-            I aim to contribute to impactful projects and explore new advancements in technology. With a strong academic background and hands-on experience in data-driven solutions, 
-            I am committed to pursuing a PhD in Computer Science to deepen my knowledge and drive innovation.</p>
-        </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <div class="project">
-                <h3>Graph Classification with GCN on PROTEINS Dataset</h3>
-                <p>a Graph Convolutional Network (GCN) using the DGL library for graph classification on the PROTEINS dataset.</p>
-                <a href="https://github.com/elnazabbasifar/GCN_PROTEINS_Classification_DGL" target="_blank">View Project</a>
-            </div>
-            <div class="project">
-                <h3>Precision in Cardiovascular Risk Prediction</h3>
-                <p>Heart Disease Prediction using Lasso Regression.</p>
-                <a href="https://github.com/elnazabbasifar/Heart-Disease-Prediction-using-Lasso-Regression" target="_blank">View Project</a>
-            </div>
-            <div class="project">
-                <h3>Advanced Prediction using Ensemble Learning Techniques</h3>
-                <p>Mobile Price Prediction using Decision Tree and Random Forest.</p>
-                <a href="https://github.com/elnazabbasifar/Mobile-Price-Prediction-using-DT-and-RF" target="_blank">View Project</a>
-            </div>
-            <div class="project">
-                <h3>EDA Seattle Area Traffic Collision Data</h3>
-                <p>Analysis of Seattle traffic collision data to prevent future incidents through Exploratory Data Analysis (EDA).</p>
-                <a href="https://github.com/elnazabbasifar/Traffic-Collisions-Team-Project" target="_blank">View Project</a>
-            </div>
-        </section>
-        <section id="publications">
-            <h2>Publications</h2>
-            <div class="publication">
-                <h3>The Impact of Social Networking Applications on Trust of Customers</h3>
-                <p>Published in the 2nd International Conference on Interdisciplinary Studies in Management & Engineering, 2020.</p>
-            </div>
-            <div class="publication">
-                <h3>New Applications of Soft Computing Technologies in Bioinformatics</h3>
-                <p>Presented at the 2nd International Conference on Advances in Engineering and Basic Sciences, 2015.</p>
-            </div>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Email: <a href="mailto:e.abbasifar@outlook.com">e.abbasifar@outlook.com</a></p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/elnazabbasifar" target="_blank">linkedin.com/in/elnazabbasifar</a></p>
-            <p>GitHub: <a href="https://github.com/elnazabbasifar" target="_blank">github.com/elnazabbasifar</a></p>
-        </section>
+<body class="bg-gray-50 text-gray-800 font-sans">
+
+  <!-- Header / Home -->
+  <header class="bg-gradient-to-r from-blue-600 to-indigo-600 text-white py-16 text-center relative overflow-hidden">
+    <div class="max-w-4xl mx-auto relative z-10">
+      <img src="your-photo.jpg" alt="Your Name" class="mx-auto rounded-full w-48 h-48 object-cover mb-6 shadow-2xl border-4 border-white">
+      <h1 class="text-5xl font-bold mb-2">[Your Name]</h1>
+      <p class="text-xl max-w-3xl mx-auto leading-relaxed">
+        M.Sc. in IT Management (Advanced Information Systems) | B.Sc. in Computer Engineering – Software<br>
+        Passionate about Machine Learning, Data Management, and advancing real-world evidence analytics.
+      </p>
     </div>
-    <footer>
-        <p>&copy; 2024 Elnaz Abbasifar. All Rights Reserved.</p>
-    </footer>
+    <div class="absolute top-0 left-0 w-full h-full opacity-20">
+      <!-- optional background effect -->
+    </div>
+  </header>
+
+  <!-- Navigation -->
+  <nav class="bg-white shadow-md py-4 sticky top-0 z-20">
+    <ul class="flex justify-center gap-8 font-semibold text-blue-600">
+      <li><a href="#cv" class="hover:text-blue-800 transition">CV</a></li>
+      <li><a href="#publications" class="hover:text-blue-800 transition">Publications & Projects</a></li>
+      <li><a href="#certificates" class="hover:text-blue-800 transition">Certificates</a></li>
+      <li><a href="#contact" class="hover:text-blue-800 transition">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- CV Section -->
+  <section id="cv" class="py-16 px-4 bg-gray-100 text-center">
+    <h2 class="text-3xl font-bold mb-6">Curriculum Vitae</h2>
+    <iframe src="your-cv.pdf" class="mx-auto w-full max-w-5xl h-[600px] border rounded-lg shadow-lg"></iframe>
+  </section>
+
+  <!-- Publications & Projects -->
+  <section id="publications" class="py-16 px-4 text-center">
+    <h2 class="text-3xl font-bold mb-12">Publications & Projects</h2>
+    <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-8">
+      
+      <!-- Publication Card Example -->
+      <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition">
+        <h3 class="text-xl font-semibold mb-2">Soft Computing in Bioinformatics: A Review</h3>
+        <p class="text-gray-600 mb-2">2nd International Conference on Advances in Engineering and Basic Sciences, London, UK, 2015</p>
+        <a href="#" class="text-blue-600 hover:underline">Read More</a>
+      </div>
+
+      <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition">
+        <h3 class="text-xl font-semibold mb-2">Social Network Applications and Customer Trust</h3>
+        <p class="text-gray-600 mb-2">2nd International Conference on Interdisciplinary Studies in Management & Engineering, University of Tehran, 2020</p>
+        <a href="#" class="text-blue-600 hover:underline">Read More</a>
+      </div>
+
+      <!-- Add more projects or publications as needed -->
+      <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition">
+        <h3 class="text-xl font-semibold mb-2">[Your Project Title]</h3>
+        <p class="text-gray-600 mb-2">Brief description, tools used, outcomes.</p>
+        <a href="#" class="text-blue-600 hover:underline">Read More</a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Certificates Section -->
+  <section id="certificates" class="py-16 px-4 bg-gray-100 text-center">
+    <h2 class="text-3xl font-bold mb-8">Certificates</h2>
+    <div class="carousel max-w-5xl mx-auto">
+      <img src="cert1.jpg" alt="Certificate 1">
+      <img src="cert2.jpg" alt="Certificate 2">
+      <img src="cert3.jpg" alt="Certificate 3">
+      <!-- Add more certificate images -->
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="py-16 px-4 text-center">
+    <h2 class="text-3xl font-bold mb-6">Contact</h2>
+    <p>Email: <a href="mailto:your.email@example.com" class="text-blue-600 hover:underline">your.email@example.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/yourprofile</a></p>
+    <p>GitHub: <a href="https://github.com/yourprofile" target="_blank" class="text-blue-600 hover:underline">github.com/yourprofile</a></p>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-blue-600 text-white py-6 text-center">
+    © 2025 [Your Name]. All rights reserved.
+  </footer>
+
 </body>
 </html>
