--- a/index.html
+++ b/index.html
@@ -3,115 +3,135 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>[Your Name] - Personal Website</title>
+  <title>Elnaz Abbasifar - Personal Website</title>
+  
+  <!-- Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+  
+  <!-- Alpine.js -->
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  
+  <!-- AOS.js for scroll animations -->
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  
   <style>
     /* Carousel styling */
-    .carousel {
-      display: flex;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      gap: 1rem;
-      padding-bottom: 1rem;
-      scroll-behavior: smooth;
+    .carousel-container {
+      position: relative;
+      overflow: hidden;
     }
-    .carousel img {
-      scroll-snap-align: start;
+    .carousel-track {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+    }
+    .carousel-item {
+      min-width: 220px;
+      margin-right: 1rem;
       border-radius: 0.5rem;
+      overflow: hidden;
+    }
+    .carousel-item img {
+      width: 100%;
       height: 220px;
       object-fit: cover;
       transition: transform 0.3s;
     }
-    .carousel img:hover {
+    .carousel-item img:hover {
       transform: scale(1.05);
     }
   </style>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
 
-  <!-- Header / Home -->
-  <header class="bg-gradient-to-r from-blue-600 to-indigo-600 text-white py-16 text-center relative overflow-hidden">
-    <div class="max-w-4xl mx-auto relative z-10">
-      <img src="your-photo.jpg" alt="Your Name" class="mx-auto rounded-full w-48 h-48 object-cover mb-6 shadow-2xl border-4 border-white">
-      <h1 class="text-5xl font-bold mb-2">[Your Name]</h1>
-      <p class="text-xl max-w-3xl mx-auto leading-relaxed">
-        M.Sc. in IT Management (Advanced Information Systems) | B.Sc. in Computer Engineering – Software<br>
-        Passionate about Machine Learning, Data Management, and advancing real-world evidence analytics.
-      </p>
+<!-- Header / Home -->
+<header class="bg-gradient-to-r from-blue-600 to-indigo-600 text-white py-16 text-center relative overflow-hidden">
+  <div class="max-w-4xl mx-auto relative z-10">
+    <img src="your-photo.jpg" alt="Your Name" class="mx-auto rounded-full w-48 h-48 object-cover mb-6 shadow-2xl border-4 border-white">
+    <h1 class="text-5xl font-bold mb-2">[Your Name]</h1>
+    <p class="text-xl max-w-3xl mx-auto leading-relaxed">
+      M.Sc. in IT Management (Advanced Information Systems) | B.Sc. in Computer Engineering – Software<br>
+      Passionate about Machine Learning, Data Management, and advancing real-world evidence analytics.
+    </p>
+  </div>
+</header>
+
+<!-- Navigation -->
+<nav class="bg-white shadow-md py-4 sticky top-0 z-20">
+  <ul class="flex justify-center gap-8 font-semibold text-blue-600">
+    <li><a href="#cv" class="hover:text-blue-800 transition">CV</a></li>
+    <li><a href="#publications" class="hover:text-blue-800 transition">Publications & Projects</a></li>
+    <li><a href="#certificates" class="hover:text-blue-800 transition">Certificates</a></li>
+    <li><a href="#contact" class="hover:text-blue-800 transition">Contact</a></li>
+  </ul>
+</nav>
+
+<!-- CV Section -->
+<section id="cv" class="py-16 px-4 bg-gray-100 text-center" data-aos="fade-up">
+  <h2 class="text-3xl font-bold mb-6">Curriculum Vitae</h2>
+  <iframe src="your-cv.pdf" class="mx-auto w-full max-w-5xl h-[600px] border rounded-lg shadow-lg"></iframe>
+</section>
+
+<!-- Publications & Projects -->
+<section id="publications" class="py-16 px-4 text-center" data-aos="fade-up">
+  <h2 class="text-3xl font-bold mb-12">Publications & Projects</h2>
+  <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-8">
+    
+    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition" data-aos="zoom-in">
+      <h3 class="text-xl font-semibold mb-2">Soft Computing in Bioinformatics: A Review</h3>
+      <p class="text-gray-600 mb-2">2nd International Conference on Advances in Engineering and Basic Sciences, London, UK, 2015</p>
+      <a href="#" class="text-blue-600 hover:underline">Read More</a>
     </div>
-    <div class="absolute top-0 left-0 w-full h-full opacity-20">
-      <!-- optional background effect -->
+
+    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition" data-aos="zoom-in" data-aos-delay="100">
+      <h3 class="text-xl font-semibold mb-2">Social Network Applications and Customer Trust</h3>
+      <p class="text-gray-600 mb-2">2nd International Conference on Interdisciplinary Studies in Management & Engineering, University of Tehran, 2020</p>
+      <a href="#" class="text-blue-600 hover:underline">Read More</a>
     </div>
-  </header>
 
-  <!-- Navigation -->
-  <nav class="bg-white shadow-md py-4 sticky top-0 z-20">
-    <ul class="flex justify-center gap-8 font-semibold text-blue-600">
-      <li><a href="#cv" class="hover:text-blue-800 transition">CV</a></li>
-      <li><a href="#publications" class="hover:text-blue-800 transition">Publications & Projects</a></li>
-      <li><a href="#certificates" class="hover:text-blue-800 transition">Certificates</a></li>
-      <li><a href="#contact" class="hover:text-blue-800 transition">Contact</a></li>
-    </ul>
-  </nav>
+    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition" data-aos="zoom-in" data-aos-delay="200">
+      <h3 class="text-xl font-semibold mb-2">[Your Project Title]</h3>
+      <p class="text-gray-600 mb-2">Brief description, tools used, outcomes.</p>
+      <a href="#" class="text-blue-600 hover:underline">Read More</a>
+    </div>
 
-  <!-- CV Section -->
-  <section id="cv" class="py-16 px-4 bg-gray-100 text-center">
-    <h2 class="text-3xl font-bold mb-6">Curriculum Vitae</h2>
-    <iframe src="your-cv.pdf" class="mx-auto w-full max-w-5xl h-[600px] border rounded-lg shadow-lg"></iframe>
-  </section>
+  </div>
+</section>
 
-  <!-- Publications & Projects -->
-  <section id="publications" class="py-16 px-4 text-center">
-    <h2 class="text-3xl font-bold mb-12">Publications & Projects</h2>
-    <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-8">
-      
-      <!-- Publication Card Example -->
-      <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition">
-        <h3 class="text-xl font-semibold mb-2">Soft Computing in Bioinformatics: A Review</h3>
-        <p class="text-gray-600 mb-2">2nd International Conference on Advances in Engineering and Basic Sciences, London, UK, 2015</p>
-        <a href="#" class="text-blue-600 hover:underline">Read More</a>
+<!-- Certificates Section -->
+<section id="certificates" class="py-16 px-4 bg-gray-100 text-center" data-aos="fade-up">
+  <h2 class="text-3xl font-bold mb-8">Certificates</h2>
+  <div x-data="{ index: 0, images: ['cert1.jpg','cert2.jpg','cert3.jpg'] }" class="relative max-w-5xl mx-auto">
+    <div class="carousel-container overflow-hidden">
+      <div class="carousel-track flex" :style="'transform: translateX(-'+ index*240 +'px)'">
+        <template x-for="img in images" :key="img">
+          <div class="carousel-item">
+            <img :src="img" alt="Certificate">
+          </div>
+        </template>
       </div>
-
-      <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition">
-        <h3 class="text-xl font-semibold mb-2">Social Network Applications and Customer Trust</h3>
-        <p class="text-gray-600 mb-2">2nd International Conference on Interdisciplinary Studies in Management & Engineering, University of Tehran, 2020</p>
-        <a href="#" class="text-blue-600 hover:underline">Read More</a>
-      </div>
-
-      <!-- Add more projects or publications as needed -->
-      <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition">
-        <h3 class="text-xl font-semibold mb-2">[Your Project Title]</h3>
-        <p class="text-gray-600 mb-2">Brief description, tools used, outcomes.</p>
-        <a href="#" class="text-blue-600 hover:underline">Read More</a>
-      </div>
-
     </div>
-  </section>
+    <!-- Navigation buttons -->
+    <button @click="index = (index === 0 ? images.length-1 : index-1)" class="absolute top-1/2 left-0 -translate-y-1/2 bg-blue-600 text-white px-3 py-2 rounded-full hover:bg-blue-700 transition">‹</button>
+    <button @click="index = (index === images.length-1 ? 0 : index+1)" class="absolute top-1/2 right-0 -translate-y-1/2 bg-blue-600 text-white px-3 py-2 rounded-full hover:bg-blue-700 transition">›</button>
+  </div>
+</section>
 
-  <!-- Certificates Section -->
-  <section id="certificates" class="py-16 px-4 bg-gray-100 text-center">
-    <h2 class="text-3xl font-bold mb-8">Certificates</h2>
-    <div class="carousel max-w-5xl mx-auto">
-      <img src="cert1.jpg" alt="Certificate 1">
-      <img src="cert2.jpg" alt="Certificate 2">
-      <img src="cert3.jpg" alt="Certificate 3">
-      <!-- Add more certificate images -->
-    </div>
-  </section>
+<!-- Contact Section -->
+<section id="contact" class="py-16 px-4 text-center" data-aos="fade-up">
+  <h2 class="text-3xl font-bold mb-6">Contact</h2>
+  <p>Email: <a href="mailto:your.email@example.com" class="text-blue-600 hover:underline">your.email@example.com</a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/yourprofile</a></p>
+  <p>GitHub: <a href="https://github.com/yourprofile" target="_blank" class="text-blue-600 hover:underline">github.com/yourprofile</a></p>
+</section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-16 px-4 text-center">
-    <h2 class="text-3xl font-bold mb-6">Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com" class="text-blue-600 hover:underline">your.email@example.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/yourprofile</a></p>
-    <p>GitHub: <a href="https://github.com/yourprofile" target="_blank" class="text-blue-600 hover:underline">github.com/yourprofile</a></p>
-  </section>
+<!-- Footer -->
+<footer class="bg-blue-600 text-white py-6 text-center">
+  © 2025 [Your Name]. All rights reserved.
+</footer>
 
-  <!-- Footer -->
-  <footer class="bg-blue-600 text-white py-6 text-center">
-    © 2025 [Your Name]. All rights reserved.
-  </footer>
-
+<script>
+  AOS.init({ duration: 800, once: true });
+</script>
 </body>
 </html>
