--- a/index.html
+++ b/index.html
@@ -3,49 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Elnaz Abbasifar - Personal Website</title>
-  
+  <title>[Your Name] - Academic Portfolio</title>
+
   <!-- Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
-  
+
   <!-- Alpine.js -->
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-  
+
   <!-- AOS.js for scroll animations -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  
+
   <style>
-    /* Carousel styling */
-    .carousel-container {
-      position: relative;
-      overflow: hidden;
-    }
-    .carousel-track {
-      display: flex;
-      transition: transform 0.5s ease-in-out;
-    }
-    .carousel-item {
-      min-width: 220px;
-      margin-right: 1rem;
-      border-radius: 0.5rem;
-      overflow: hidden;
-    }
-    .carousel-item img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
-      transition: transform 0.3s;
-    }
-    .carousel-item img:hover {
-      transform: scale(1.05);
-    }
+    body { scroll-behavior: smooth; }
+    .carousel-container { position: relative; overflow: hidden; }
+    .carousel-track { display: flex; transition: transform 0.5s ease-in-out; }
+    .carousel-item { min-width: 240px; margin-right: 1rem; border-radius: 0.5rem; overflow: hidden; flex-shrink: 0; }
+    .carousel-item img { width: 100%; height: 220px; object-fit: cover; transition: transform 0.3s; }
+    .carousel-item img:hover { transform: scale(1.05); }
+    header { background: linear-gradient(135deg, #4f46e5, #6366f1); }
+    section { padding: 6rem 1rem; }
   </style>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
 
 <!-- Header / Home -->
-<header class="bg-gradient-to-r from-blue-600 to-indigo-600 text-white py-16 text-center relative overflow-hidden">
+<header class="text-white py-20 text-center relative">
   <div class="max-w-4xl mx-auto relative z-10">
     <img src="your-photo.jpg" alt="Your Name" class="mx-auto rounded-full w-48 h-48 object-cover mb-6 shadow-2xl border-4 border-white">
     <h1 class="text-5xl font-bold mb-2">[Your Name]</h1>
@@ -67,29 +51,29 @@
 </nav>
 
 <!-- CV Section -->
-<section id="cv" class="py-16 px-4 bg-gray-100 text-center" data-aos="fade-up">
+<section id="cv" class="bg-gradient-to-r from-indigo-100 to-purple-100 text-center" data-aos="fade-up">
   <h2 class="text-3xl font-bold mb-6">Curriculum Vitae</h2>
   <iframe src="your-cv.pdf" class="mx-auto w-full max-w-5xl h-[600px] border rounded-lg shadow-lg"></iframe>
 </section>
 
 <!-- Publications & Projects -->
-<section id="publications" class="py-16 px-4 text-center" data-aos="fade-up">
+<section id="publications" class="bg-gray-50 text-center" data-aos="fade-up">
   <h2 class="text-3xl font-bold mb-12">Publications & Projects</h2>
   <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-8">
     
-    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition" data-aos="zoom-in">
+    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-2xl hover:scale-105 transition transform" data-aos="zoom-in">
       <h3 class="text-xl font-semibold mb-2">Soft Computing in Bioinformatics: A Review</h3>
       <p class="text-gray-600 mb-2">2nd International Conference on Advances in Engineering and Basic Sciences, London, UK, 2015</p>
       <a href="#" class="text-blue-600 hover:underline">Read More</a>
     </div>
 
-    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition" data-aos="zoom-in" data-aos-delay="100">
+    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-2xl hover:scale-105 transition transform" data-aos="zoom-in" data-aos-delay="100">
       <h3 class="text-xl font-semibold mb-2">Social Network Applications and Customer Trust</h3>
       <p class="text-gray-600 mb-2">2nd International Conference on Interdisciplinary Studies in Management & Engineering, University of Tehran, 2020</p>
       <a href="#" class="text-blue-600 hover:underline">Read More</a>
     </div>
 
-    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition" data-aos="zoom-in" data-aos-delay="200">
+    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-2xl hover:scale-105 transition transform" data-aos="zoom-in" data-aos-delay="200">
       <h3 class="text-xl font-semibold mb-2">[Your Project Title]</h3>
       <p class="text-gray-600 mb-2">Brief description, tools used, outcomes.</p>
       <a href="#" class="text-blue-600 hover:underline">Read More</a>
@@ -99,11 +83,11 @@
 </section>
 
 <!-- Certificates Section -->
-<section id="certificates" class="py-16 px-4 bg-gray-100 text-center" data-aos="fade-up">
+<section id="certificates" class="bg-gradient-to-r from-purple-100 to-indigo-100 text-center" data-aos="fade-up">
   <h2 class="text-3xl font-bold mb-8">Certificates</h2>
   <div x-data="{ index: 0, images: ['cert1.jpg','cert2.jpg','cert3.jpg'] }" class="relative max-w-5xl mx-auto">
     <div class="carousel-container overflow-hidden">
-      <div class="carousel-track flex" :style="'transform: translateX(-'+ index*240 +'px)'">
+      <div class="carousel-track flex" :style="'transform: translateX(-'+ index*260 +'px)'">
         <template x-for="img in images" :key="img">
           <div class="carousel-item">
             <img :src="img" alt="Certificate">
@@ -111,14 +95,13 @@
         </template>
       </div>
     </div>
-    <!-- Navigation buttons -->
     <button @click="index = (index === 0 ? images.length-1 : index-1)" class="absolute top-1/2 left-0 -translate-y-1/2 bg-blue-600 text-white px-3 py-2 rounded-full hover:bg-blue-700 transition">‹</button>
     <button @click="index = (index === images.length-1 ? 0 : index+1)" class="absolute top-1/2 right-0 -translate-y-1/2 bg-blue-600 text-white px-3 py-2 rounded-full hover:bg-blue-700 transition">›</button>
   </div>
 </section>
 
 <!-- Contact Section -->
-<section id="contact" class="py-16 px-4 text-center" data-aos="fade-up">
+<section id="contact" class="bg-gray-50 text-center" data-aos="fade-up">
   <h2 class="text-3xl font-bold mb-6">Contact</h2>
   <p>Email: <a href="mailto:your.email@example.com" class="text-blue-600 hover:underline">your.email@example.com</a></p>
   <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/yourprofile</a></p>
@@ -132,6 +115,18 @@
 
 <script>
   AOS.init({ duration: 800, once: true });
+
+  // Optional: Auto-scroll carousel every 3s
+  document.addEventListener('alpine:init', () => {
+    Alpine.data('carouselAuto', () => ({
+      index: 0,
+      images: ['cert1.jpg','cert2.jpg','cert3.jpg'],
+      init() {
+        setInterval(() => { this.index = (this.index+1)%this.images.length }, 3000);
+      }
+    }))
+  })
 </script>
+
 </body>
 </html>
