--- a/index.html
+++ b/index.html
@@ -1,131 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>[Your Name] - Academic Portfolio</title>
-
-  <!-- Tailwind CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
-
-  <!-- Alpine.js -->
-  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-
-  <!-- AOS.js for scroll animations -->
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-
-  <style>
-    body { scroll-behavior: smooth; }
-    .carousel-container { position: relative; overflow: hidden; }
-    .carousel-track { display: flex; transition: transform 0.5s ease-in-out; }
-    .carousel-item { min-width: 240px; margin-right: 1rem; border-radius: 0.5rem; overflow: hidden; flex-shrink: 0; }
-    .carousel-item img { width: 100%; height: 220px; object-fit: cover; transition: transform 0.3s; }
-    .carousel-item img:hover { transform: scale(1.05); }
-    header { background: linear-gradient(135deg, #4f46e5, #6366f1); }
-    section { padding: 6rem 1rem; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Elnaz Abbasifar - Personal Website</title>
+<style>
+/* ------------------------ */
+/* Basic Reset and Fonts */
+body, html { margin:0; padding:0; scroll-behavior: smooth; font-family: Arial, sans-serif; background:#f9fafb; color:#333; }
+a { text-decoration:none; color:#2563eb; }
+a:hover { text-decoration:underline; }
+/* ------------------------ */
+/* Header */
+header { background: linear-gradient(135deg, #4f46e5, #6366f1); color:white; text-align:center; padding:120px 20px; }
+header img { width: 180px; height:180px; border-radius:50%; object-fit:cover; border:4px solid white; margin-bottom:20px; box-shadow:0 8px 20px rgba(0,0,0,0.3);}
+header h1 { font-size:3rem; margin-bottom:0.5rem; }
+header p { font-size:1.2rem; max-width:700px; margin:0 auto; line-height:1.5; }
+/* ------------------------ */
+/* Nav */
+nav { position:sticky; top:0; background:white; box-shadow:0 2px 6px rgba(0,0,0,0.1); z-index:20; }
+nav ul { display:flex; justify-content:center; gap:2rem; padding:1rem; margin:0; list-style:none; font-weight:bold; }
+nav a { color:#2563eb; transition:0.3s; }
+nav a:hover { color:#1d4ed8; }
+/* ------------------------ */
+/* Sections */
+section { padding:80px 20px; text-align:center; }
+section h2 { font-size:2.5rem; margin-bottom:2rem; }
+/* CV iframe */
+iframe { width:100%; max-width:900px; height:600px; border-radius:8px; box-shadow:0 6px 18px rgba(0,0,0,0.15); border:none; }
+/* Publications & Projects */
+.cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:20px; max-width:1000px; margin:0 auto; }
+.card { background:white; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); transition:0.3s; }
+.card:hover { transform:scale(1.05); box-shadow:0 8px 25px rgba(0,0,0,0.2); }
+/* Carousel */
+.carousel { position:relative; overflow:hidden; max-width:900px; margin:0 auto; }
+.carousel-track { display:flex; transition:transform 0.5s ease-in-out; }
+.carousel-item { flex:0 0 260px; margin-right:1rem; border-radius:8px; overflow:hidden; }
+.carousel-item img { width:100%; height:180px; object-fit:cover; transition:0.3s; }
+.carousel-item img:hover { transform:scale(1.05); }
+.carousel-btn { position:absolute; top:50%; transform:translateY(-50%); background:#2563eb; color:white; border:none; padding:8px 12px; border-radius:50%; cursor:pointer; font-size:1.5rem; transition:0.3s; }
+.carousel-btn:hover { background:#1d4ed8; }
+.carousel-btn.left { left:10px; }
+.carousel-btn.right { right:10px; }
+/* Contact */
+#contact p { margin:0.5rem 0; }
+/* Footer */
+footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
+/* Scroll animation */
+[data-animate] { opacity:0; transform:translateY(30px); transition:all 0.8s ease-out; }
+[data-animate].active { opacity:1; transform:translateY(0); }
+</style>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans">
+<body>
 
-<!-- Header / Home -->
-<header class="text-white py-20 text-center relative">
-  <div class="max-w-4xl mx-auto relative z-10">
-    <img src="your-photo.jpg" alt="Your Name" class="mx-auto rounded-full w-48 h-48 object-cover mb-6 shadow-2xl border-4 border-white">
-    <h1 class="text-5xl font-bold mb-2">[Your Name]</h1>
-    <p class="text-xl max-w-3xl mx-auto leading-relaxed">
-      M.Sc. in IT Management (Advanced Information Systems) | B.Sc. in Computer Engineering – Software<br>
-      Passionate about Machine Learning, Data Management, and advancing real-world evidence analytics.
-    </p>
-  </div>
+<!-- Header -->
+<header>
+<img src="your-photo.jpg" alt="[Your Name]">
+<h1>[Your Name]</h1>
+<p>M.Sc. in IT Management (Advanced Information Systems) | B.Sc. in Computer Engineering – Software<br>
+Passionate about Machine Learning, Data Management, and advancing real-world evidence analytics.</p>
 </header>
 
 <!-- Navigation -->
-<nav class="bg-white shadow-md py-4 sticky top-0 z-20">
-  <ul class="flex justify-center gap-8 font-semibold text-blue-600">
-    <li><a href="#cv" class="hover:text-blue-800 transition">CV</a></li>
-    <li><a href="#publications" class="hover:text-blue-800 transition">Publications & Projects</a></li>
-    <li><a href="#certificates" class="hover:text-blue-800 transition">Certificates</a></li>
-    <li><a href="#contact" class="hover:text-blue-800 transition">Contact</a></li>
-  </ul>
+<nav>
+<ul>
+<li><a href="#cv">CV</a></li>
+<li><a href="#publications">Publications & Projects</a></li>
+<li><a href="#certificates">Certificates</a></li>
+<li><a href="#contact">Contact</a></li>
+</ul>
 </nav>
 
-<!-- CV Section -->
-<section id="cv" class="bg-gradient-to-r from-indigo-100 to-purple-100 text-center" data-aos="fade-up">
-  <h2 class="text-3xl font-bold mb-6">Curriculum Vitae</h2>
-  <iframe src="your-cv.pdf" class="mx-auto w-full max-w-5xl h-[600px] border rounded-lg shadow-lg"></iframe>
+<!-- CV -->
+<section id="cv" data-animate>
+<h2>Curriculum Vitae</h2>
+<iframe src="your-cv.pdf"></iframe>
 </section>
 
 <!-- Publications & Projects -->
-<section id="publications" class="bg-gray-50 text-center" data-aos="fade-up">
-  <h2 class="text-3xl font-bold mb-12">Publications & Projects</h2>
-  <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-8">
-    
-    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-2xl hover:scale-105 transition transform" data-aos="zoom-in">
-      <h3 class="text-xl font-semibold mb-2">Soft Computing in Bioinformatics: A Review</h3>
-      <p class="text-gray-600 mb-2">2nd International Conference on Advances in Engineering and Basic Sciences, London, UK, 2015</p>
-      <a href="#" class="text-blue-600 hover:underline">Read More</a>
-    </div>
-
-    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-2xl hover:scale-105 transition transform" data-aos="zoom-in" data-aos-delay="100">
-      <h3 class="text-xl font-semibold mb-2">Social Network Applications and Customer Trust</h3>
-      <p class="text-gray-600 mb-2">2nd International Conference on Interdisciplinary Studies in Management & Engineering, University of Tehran, 2020</p>
-      <a href="#" class="text-blue-600 hover:underline">Read More</a>
-    </div>
-
-    <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-2xl hover:scale-105 transition transform" data-aos="zoom-in" data-aos-delay="200">
-      <h3 class="text-xl font-semibold mb-2">[Your Project Title]</h3>
-      <p class="text-gray-600 mb-2">Brief description, tools used, outcomes.</p>
-      <a href="#" class="text-blue-600 hover:underline">Read More</a>
-    </div>
-
-  </div>
+<section id="publications" data-animate style="background:#eef2ff;">
+<h2>Publications & Projects</h2>
+<div class="cards">
+<div class="card">
+<h3>Soft Computing in Bioinformatics: A Review</h3>
+<p>2nd International Conference on Advances in Engineering and Basic Sciences, London, UK, 2015</p>
+<a href="#">Read More</a>
+</div>
+<div class="card">
+<h3>Social Network Applications and Customer Trust</h3>
+<p>2nd International Conference on Interdisciplinary Studies in Management & Engineering, University of Tehran, 2020</p>
+<a href="#">Read More</a>
+</div>
+<div class="card">
+<h3>[Your Project Title]</h3>
+<p>Brief description, tools used, outcomes.</p>
+<a href="#">Read More</a>
+</div>
+</div>
 </section>
 
-<!-- Certificates Section -->
-<section id="certificates" class="bg-gradient-to-r from-purple-100 to-indigo-100 text-center" data-aos="fade-up">
-  <h2 class="text-3xl font-bold mb-8">Certificates</h2>
-  <div x-data="{ index: 0, images: ['cert1.jpg','cert2.jpg','cert3.jpg'] }" class="relative max-w-5xl mx-auto">
-    <div class="carousel-container overflow-hidden">
-      <div class="carousel-track flex" :style="'transform: translateX(-'+ index*260 +'px)'">
-        <template x-for="img in images" :key="img">
-          <div class="carousel-item">
-            <img :src="img" alt="Certificate">
-          </div>
-        </template>
-      </div>
-    </div>
-    <button @click="index = (index === 0 ? images.length-1 : index-1)" class="absolute top-1/2 left-0 -translate-y-1/2 bg-blue-600 text-white px-3 py-2 rounded-full hover:bg-blue-700 transition">‹</button>
-    <button @click="index = (index === images.length-1 ? 0 : index+1)" class="absolute top-1/2 right-0 -translate-y-1/2 bg-blue-600 text-white px-3 py-2 rounded-full hover:bg-blue-700 transition">›</button>
-  </div>
+<!-- Certificates Carousel -->
+<section id="certificates" data-animate>
+<h2>Certificates</h2>
+<div class="carousel" id="carousel">
+<div class="carousel-track" id="track">
+<div class="carousel-item"><img src="cert1.jpg" alt="Certificate 1"></div>
+<div class="carousel-item"><img src="cert2.jpg" alt="Certificate 2"></div>
+<div class="carousel-item"><img src="cert3.jpg" alt="Certificate 3"></div>
+</div>
+<button class="carousel-btn left" id="prev">‹</button>
+<button class="carousel-btn right" id="next">›</button>
+</div>
 </section>
 
-<!-- Contact Section -->
-<section id="contact" class="bg-gray-50 text-center" data-aos="fade-up">
-  <h2 class="text-3xl font-bold mb-6">Contact</h2>
-  <p>Email: <a href="mailto:your.email@example.com" class="text-blue-600 hover:underline">your.email@example.com</a></p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/yourprofile</a></p>
-  <p>GitHub: <a href="https://github.com/yourprofile" target="_blank" class="text-blue-600 hover:underline">github.com/yourprofile</a></p>
+<!-- Contact -->
+<section id="contact" data-animate style="background:#eef2ff;">
+<h2>Contact</h2>
+<p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+<p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+<p>GitHub: <a href="https://github.com/yourprofile" target="_blank">github.com/yourprofile</a></p>
 </section>
 
 <!-- Footer -->
-<footer class="bg-blue-600 text-white py-6 text-center">
-  © 2025 [Your Name]. All rights reserved.
+<footer>
+© 2025 [Your Name]. All rights reserved.
 </footer>
 
 <script>
-  AOS.init({ duration: 800, once: true });
+// ----------------------
+// Scroll animation
+function scrollAnimation() {
+  const elements = document.querySelectorAll('[data-animate]');
+  const triggerBottom = window.innerHeight * 0.85;
+  elements.forEach(el => {
+    const boxTop = el.getBoundingClientRect().top;
+    if(boxTop < triggerBottom) el.classList.add('active');
+  });
+}
+window.addEventListener('scroll', scrollAnimation);
+window.addEventListener('load', scrollAnimation);
 
-  // Optional: Auto-scroll carousel every 3s
-  document.addEventListener('alpine:init', () => {
-    Alpine.data('carouselAuto', () => ({
-      index: 0,
-      images: ['cert1.jpg','cert2.jpg','cert3.jpg'],
-      init() {
-        setInterval(() => { this.index = (this.index+1)%this.images.length }, 3000);
-      }
-    }))
-  })
+// ----------------------
+// Carousel
+const track = document.getElementById('track');
+const prev = document.getElementById('prev');
+const next = document.getElementById('next');
+const items = track.children;
+let index = 0;
+
+function updateCarousel() {
+  track.style.transform = `translateX(-${index*260}px)`;
+}
+
+prev.addEventListener('click', () => {
+  index = (index === 0 ? items.length-1 : index-1);
+  updateCarousel();
+});
+next.addEventListener('click', () => {
+  index = (index === items.length-1 ? 0 : index+1);
+  updateCarousel();
+});
+
+// Auto-scroll every 3s
+setInterval(() => {
+  index = (index+1) % items.length;
+  updateCarousel();
+}, 3000);
 </script>
 
 </body>
