--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Elnaz Abbasifar - Personal Website</title>
+<title>[Your Name] - Academic Portfolio</title>
 <style>
 /* ------------------------ */
 /* Basic Reset and Fonts */
@@ -26,8 +26,10 @@ nav a:hover { color:#1d4ed8; }
 /* Sections */
 section { padding:80px 20px; text-align:center; }
 section h2 { font-size:2.5rem; margin-bottom:2rem; }
-/* CV iframe */
-iframe { width:100%; max-width:900px; height:600px; border-radius:8px; box-shadow:0 6px 18px rgba(0,0,0,0.15); border:none; }
+/* CV Section */
+.cv-section { max-width:900px; margin:0 auto; text-align:left; }
+.cv-section h3 { margin-top:1.5rem; color:#1e40af; }
+.cv-section ul { margin-left:1.2rem; margin-bottom:1rem; }
 /* Publications & Projects */
 .cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:20px; max-width:1000px; margin:0 auto; }
 .card { background:white; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); transition:0.3s; }
@@ -42,13 +44,13 @@ iframe { width:100%; max-width:900px; height:600px; border-radius:8px; box-shado
 .carousel-btn:hover { background:#1d4ed8; }
 .carousel-btn.left { left:10px; }
 .carousel-btn.right { right:10px; }
+/* Scroll animation */
+[data-animate] { opacity:0; transform:translateY(30px); transition:all 0.8s ease-out; }
+[data-animate].active { opacity:1; transform:translateY(0); }
 /* Contact */
 #contact p { margin:0.5rem 0; }
 /* Footer */
 footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
-/* Scroll animation */
-[data-animate] { opacity:0; transform:translateY(30px); transition:all 0.8s ease-out; }
-[data-animate].active { opacity:1; transform:translateY(0); }
 </style>
 </head>
 <body>
@@ -71,14 +73,33 @@ Passionate about Machine Learning, Data Management, and advancing real-world evi
 </ul>
 </nav>
 
-<!-- CV -->
-<section id="cv" data-animate>
+<!-- CV Section -->
+<section id="cv" data-animate style="background:#eef2ff;">
 <h2>Curriculum Vitae</h2>
-<iframe src="your-cv.pdf"></iframe>
+<div class="cv-section">
+<h3>Education</h3>
+<ul>
+<li>M.Sc. in IT Management (Advanced Information Systems)</li>
+<li>B.Sc. in Computer Engineering – Software</li>
+</ul>
+<h3>Skills</h3>
+<ul>
+<li>Data Management & Integration</li>
+<li>Machine Learning & Predictive Analytics</li>
+<li>Graph-based Data Analysis (GraphSAGE, PyTorch Geometric)</li>
+<li>Python, SQL, C#</li>
+</ul>
+<h3>Experience</h3>
+<ul>
+<li>BPMS Developer – Process Automation & Data Analysis</li>
+<li>Worked on network analysis and workflow optimization</li>
+<li>Designed ML-based analytical workflows for real-world datasets</li>
+</ul>
+</div>
 </section>
 
 <!-- Publications & Projects -->
-<section id="publications" data-animate style="background:#eef2ff;">
+<section id="publications" data-animate>
 <h2>Publications & Projects</h2>
 <div class="cards">
 <div class="card">
@@ -100,7 +121,7 @@ Passionate about Machine Learning, Data Management, and advancing real-world evi
 </section>
 
 <!-- Certificates Carousel -->
-<section id="certificates" data-animate>
+<section id="certificates" data-animate style="background:#eef2ff;">
 <h2>Certificates</h2>
 <div class="carousel" id="carousel">
 <div class="carousel-track" id="track">
@@ -114,7 +135,7 @@ Passionate about Machine Learning, Data Management, and advancing real-world evi
 </section>
 
 <!-- Contact -->
-<section id="contact" data-animate style="background:#eef2ff;">
+<section id="contact" data-animate>
 <h2>Contact</h2>
 <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
 <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
@@ -127,7 +148,6 @@ Passionate about Machine Learning, Data Management, and advancing real-world evi
 </footer>
 
 <script>
-// ----------------------
 // Scroll animation
 function scrollAnimation() {
   const elements = document.querySelectorAll('[data-animate]');
@@ -140,7 +160,6 @@ function scrollAnimation() {
 window.addEventListener('scroll', scrollAnimation);
 window.addEventListener('load', scrollAnimation);
 
-// ----------------------
 // Carousel
 const track = document.getElementById('track');
 const prev = document.getElementById('prev');
@@ -151,21 +170,9 @@ let index = 0;
 function updateCarousel() {
   track.style.transform = `translateX(-${index*260}px)`;
 }
-
-prev.addEventListener('click', () => {
-  index = (index === 0 ? items.length-1 : index-1);
-  updateCarousel();
-});
-next.addEventListener('click', () => {
-  index = (index === items.length-1 ? 0 : index+1);
-  updateCarousel();
-});
-
-// Auto-scroll every 3s
-setInterval(() => {
-  index = (index+1) % items.length;
-  updateCarousel();
-}, 3000);
+prev.addEventListener('click', () => { index = (index===0?items.length-1:index-1); updateCarousel(); });
+next.addEventListener('click', () => { index = (index===items.length-1?0:index+1); updateCarousel(); });
+setInterval(()=>{ index = (index+1)%items.length; updateCarousel(); }, 3000);
 </script>
 
 </body>
