--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ Passionate about Machine Learning, Data Management, and advancing real-world evi
 <h2>Certificates</h2>
 <div class="carousel" id="carousel">
 <div class="carousel-track" id="track">
-<div class="carousel-item"><img src="https://via.placeholder.com/260x180?text=Cert+1" alt="Certificate 1"></div>
-<div class="carousel-item"><img src="https://via.placeholder.com/260x180?text=Cert+2" alt="Certificate 2"></div>
+<div class="carousel-item"><img src="https://drive.google.com/file/d/1_NaeBTSXBd8EBJ_e6bIibkqt4YTADphY/view?usp=drive_link" alt="Supervised Machine Learning"></div>
+<div class="carousel-item"><img src="hhttps://drive.google.com/file/d/1UWFwUqIsvZSdfysjPLKuo1JFUk1cxigv/view?usp=drive_link" alt="Matrix Algebra"></div>
 <div class="carousel-item"><img src="https://via.placeholder.com/260x180?text=Cert+3" alt="Certificate 3"></div>
 </div>
 <button class="carousel-btn left" id="prev">‹</button>
@@ -176,9 +176,9 @@ Passionate about Machine Learning, Data Management, and advancing real-world evi
 <!-- Contact -->
 <section id="contact" data-animate>
 <h2>Contact</h2>
-<p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-<p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
-<p>GitHub: <a href="https://github.com/yourprofile" target="_blank">github.com/yourprofile</a></p>
+<p>Email: <a href="mailto:e.abbasifar@outlook.com">e.abbasifar@outlook.com</a></p>
+<p>LinkedIn: <a href="https://www.linkedin.com/in/elnazabbasifar/" target="_blank">linkedin.com/in/elnazabbasifar</a></p>
+<p>GitHub: <a href="https://github.com/elnazabbasifar" target="_blank">github.com/elnazabbasifar</a></p>
 </section>
 
 <!-- Footer -->
