--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Elnaz Abbasifar - Academic Portfolio</title>
+<title>Elnaz Abbasifar</title>
 <style>
 /* Basic Reset */
 body, html { margin:0; padding:0; font-family: Arial,sans-serif; scroll-behavior: smooth; background:#f9fafb; color:#333; }
@@ -59,8 +59,7 @@ footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
 <header>
 <img src="https://via.placeholder.com/180" alt="Elnaz Abbasifar">
 <h1>Elnaz Abbasifar</h1>
-<p>M.Sc. in IT Management | B.Sc. in Computer Engineering – Software<br>
-Passionate about Machine Learning, Data Management, and advancing real-world evidence analytics.</p>
+<p>M.Sc. in IT Management | B.Sc. in Computer Engineering – Software</p>
 </header>
 
 <!-- Navigation -->
@@ -89,10 +88,10 @@ Passionate about Machine Learning, Data Management, and advancing real-world evi
 <div class="card">
 <h3>Summer Schools & Specialized Training</h3>
 <ul>
-<li>Artificial Intelligence Autumn School, Amirkabir University of Technology, Iran – Nov–Dec 2021</li>
-<li>Resource-Aware Machine Learning, 5th International Summer School, TU Dortmund University, Germany – Sep 2020</li>
-<li>Security of Things (SeThi 2020), University of Rostock, Germany – Aug–Sep 2020</li>
-<li>Lviv Data Science Summer School, Ukrainian Catholic University, Ukraine – Jul 2020</li>
+<li>**Artificial Intelligence Autumn School** <br>Amirkabir University of Technology, Iran (Nov–Dec 2021)</li>
+<li>**Resource-Aware Machine Learning** <br> 5th International Summer School, TU Dortmund University, Germany (Sep 2020)</li>
+<li>**Security of Things (SeThi 2020)** <br>University of Rostock, Germany (Aug–Sep 2020)</li>
+<li>**Lviv Data Science Summer School** <br>Ukrainian Catholic University, Ukraine (Jul 2020)</li>
 </ul>
 </div>
 </div>
