--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
 <div class="card">
 <h3>Summer Schools & Specialized Training</h3>
 <ul>
-<li>**Artificial Intelligence Autumn School** <br>Amirkabir University of Technology, Iran (Nov–Dec 2021)</li>
-<li>**Resource-Aware Machine Learning** <br> 5th International Summer School, TU Dortmund University, Germany (Sep 2020)</li>
-<li>**Security of Things (SeThi 2020)** <br>University of Rostock, Germany (Aug–Sep 2020)</li>
-<li>**Lviv Data Science Summer School** <br>Ukrainian Catholic University, Ukraine (Jul 2020)</li>
+<li><b>Artificial Intelligence Autumn School</b>, Amirkabir University of Technology, Iran (Nov–Dec 2021)</li>
+<li><b>Resource-Aware Machine Learning</b>, 5th International Summer School, TU Dortmund University, Germany (Sep 2020)</li>
+<li><b>Security of Things (SeThi 2020)</b>, University of Rostock, Germany (Aug–Sep 2020)</li>
+<li><b>Lviv Data Science Summer School</b>, Ukrainian Catholic University, Ukraine (Jul 2020)</li>
 </ul>
 </div>
 </div>
