--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@ body, html { margin:0; padding:0; font-family: Arial,sans-serif; scroll-behavior
 a { text-decoration:none; color:#2563eb; }
 a:hover { text-decoration:underline; }
 
-/* Header */
-header { background: linear-gradient(135deg, #4f46e5, #6366f1); color:white; text-align:center; padding:100px 20px; }
-header img { width:180px; height:180px; border-radius:50%; object-fit:cover; border:4px solid white; margin-bottom:20px; box-shadow:0 8px 20px rgba(0,0,0,0.3);}
-header h1 { font-size:3rem; margin-bottom:0.5rem; }
-header p { font-size:1.2rem; max-width:700px; margin:0 auto; line-height:1.5; }
+/* Header - left aligned */
+header { background: linear-gradient(135deg, #4f46e5, #6366f1); color:white; text-align:left; padding:40px 60px; display:flex; align-items:center; gap:20px; }
+header img { width:140px; height:140px; border-radius:50%; object-fit:cover; border:4px solid white; box-shadow:0 8px 20px rgba(0,0,0,0.3);}
+header div { max-width:600px; }
+header h1 { font-size:2.5rem; margin-bottom:0.3rem; }
+header p { font-size:1rem; line-height:1.4; margin-bottom:0.5rem; }
 
 /* Nav */
 nav { position:sticky; top:0; background:white; box-shadow:0 2px 6px rgba(0,0,0,0.1); z-index:20; }
@@ -23,11 +24,11 @@ nav a { color:#2563eb; transition:0.3s; }
 nav a:hover { color:#1d4ed8; }
 
 /* Sections */
-section { padding:60px 20px; text-align:center; }
-section h2 { font-size:2.2rem; margin-bottom:2rem; color:#1e40af; }
+section { padding:50px 20px; text-align:center; }
+section h2 { font-size:2rem; margin-bottom:1.5rem; color:#1e40af; }
 .section-content { max-width:900px; margin:0 auto; text-align:left; }
 
-/* CV/Info cards */
+/* Cards */
 .card { background:white; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); margin-bottom:20px; transition:0.3s; }
 .card:hover { transform:scale(1.02); box-shadow:0 8px 25px rgba(0,0,0,0.2); }
 
@@ -48,18 +49,20 @@ section h2 { font-size:2.2rem; margin-bottom:2rem; color:#1e40af; }
 /* Scroll animation */
 [data-animate] { opacity:0; transform:translateY(30px); transition:all 0.8s ease-out; }
 [data-animate].active { opacity:1; transform:translateY(0); }
-
-/* Footer */
-footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
 </style>
 </head>
 <body>
 
 <!-- Header -->
 <header>
-<img src="https://via.placeholder.com/180" alt="Elnaz Abbasifar">
+<img src="https://via.placeholder.com/140" alt="Elnaz Abbasifar">
+<div>
 <h1>Elnaz Abbasifar</h1>
 <p>M.Sc. in IT Management | B.Sc. in Computer Engineering – Software</p>
+<p>Email: <a href="mailto:e.abbasifar@outlook.com">e.abbasifar@outlook.com</a> | 
+LinkedIn: <a href="https://www.linkedin.com/in/elnazabbasifar/" target="_blank">linkedin.com/in/elnazabbasifar</a> | 
+GitHub: <a href="https://github.com/elnazabbasifar" target="_blank">github.com/elnazabbasifar</a></p>
+</div>
 </header>
 
 <!-- Navigation -->
@@ -67,10 +70,10 @@ footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
 <ul>
 <li><a href="#education">Education & Training</a></li>
 <li><a href="#research">Research Experience</a></li>
+<li><a href="#work">Work Experience</a></li>
 <li><a href="#projects">Projects</a></li>
 <li><a href="#skills">Skills</a></li>
 <li><a href="#certificates">Certificates</a></li>
-<li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
 
@@ -105,7 +108,6 @@ footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
 <h3>AI Researcher – Technology Studies Institute, Tehran, Iran (Feb – Sep 2021)</h3>
 <ul>
 <li>Conducted comparative analysis of global AI ecosystems, ranking sustainability indicators.</li>
-<li>Collaborated with interdisciplinary scientists to integrate insights across CS, policy, and management.</li>
 </ul>
 </div>
 <div class="card">
@@ -117,8 +119,39 @@ footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
 </div>
 </section>
 
+<!-- Work Experience -->
+<section id="work" data-animate style="background:#eef2ff;">
+<h2>Work Experience</h2>
+<div class="section-content">
+<div class="card">
+<h3>BPM Data Analyst – Pegah Aftab, Tehran, Iran (Apr 2021 – Present)</h3>
+<ul>
+<li>Designed and implemented business processes and UI components using C# and React.</li>
+</ul>
+</div>
+<div class="card">
+<h3>BI Developer – Pegah Aftab, Tehran, Iran (Jun – Dec 2024)</h3>
+<ul>
+<li>Developed interactive dashboards in Power BI to visualize key performance metrics.</li>
+</ul>
+</div>
+<div class="card">
+<h3>Data Science Intern (Python) – T25 Company, Tehran, Iran (Nov 2020 – Jan 2021)</h3>
+<ul>
+<li>Developed Python scripts to automate data collection, processing, and analysis.</li>
+</ul>
+</div>
+<div class="card">
+<h3>SQL Developer / BPM Developer – Payam Mashregh, Esfahan, Iran (2014 – 2017)</h3>
+<ul>
+<li>Supervised a 9-member development team and implemented SQL queries to optimize workflows.</li>
+</ul>
+</div>
+</div>
+</section>
+
 <!-- Projects -->
-<section id="projects" data-animate style="background:#eef2ff;">
+<section id="projects" data-animate>
 <h2>Projects</h2>
 <div class="section-content cards">
 <div class="card">
@@ -145,7 +178,7 @@ footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
 </section>
 
 <!-- Skills -->
-<section id="skills" data-animate>
+<section id="skills" data-animate style="background:#eef2ff;">
 <h2>Skills</h2>
 <div class="section-content">
 <div class="card">
@@ -163,27 +196,14 @@ footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
 <h2>Certificates</h2>
 <div class="carousel" id="carousel">
 <div class="carousel-track" id="track">
-<div class="carousel-item"><img src="https://drive.google.com/file/d/1_NaeBTSXBd8EBJ_e6bIibkqt4YTADphY/view?usp=drive_link" alt="Supervised Machine Learning"></div>
-<div class="carousel-item"><img src="hhttps://drive.google.com/file/d/1UWFwUqIsvZSdfysjPLKuo1JFUk1cxigv/view?usp=drive_link" alt="Matrix Algebra"></div>
+<div class="carousel-item"><img src="https://via.placeholder.com/260x180?text=Cert+1" alt="Certificate 1"></div>
+<div class="carousel-item"><img src="https://via.placeholder.com/260x180?text=Cert+2" alt="Certificate 2"></div>
 <div class="carousel-item"><img src="https://via.placeholder.com/260x180?text=Cert+3" alt="Certificate 3"></div>
 </div>
 <button class="carousel-btn left" id="prev">‹</button>
 <button class="carousel-btn right" id="next">›</button>
 </div>
 </section>
-
-<!-- Contact -->
-<section id="contact" data-animate>
-<h2>Contact</h2>
-<p>Email: <a href="mailto:e.abbasifar@outlook.com">e.abbasifar@outlook.com</a></p>
-<p>LinkedIn: <a href="https://www.linkedin.com/in/elnazabbasifar/" target="_blank">linkedin.com/in/elnazabbasifar</a></p>
-<p>GitHub: <a href="https://github.com/elnazabbasifar" target="_blank">github.com/elnazabbasifar</a></p>
-</section>
-
-<!-- Footer -->
-<footer>
-© 2025 Elnaz Abbasifar. All rights reserved.
-</footer>
 
 <script>
 // Scroll animation
